2006-09-06  Don Scorgie  <DonScorgie@Blueyonder.co.uk>

	* MMapArea.py:
	* Thoughts.py:
	Draw links behind thoughts to make thoughts feel more solid

	* MMapArea.py:
	Don't redraw on mouse motion when not watching
	Only redraw every 1/40th second to stop from hammering X server

2006-08-29  Don Scorgie  <DonScorgie@Blueyonder.co.uk>

	* Initial Import into new home on Google

What follows is the svn log dumped from the repo on my machine.  Don't judge it too harshly ;)
	
------------------------------------------------------------------------
r85 | don | 2006-08-28 16:16:00 +0100 (Mon, 28 Aug 2006) | 2 lines

Oops forgot to add in md5sums.

------------------------------------------------------------------------
r84 | don | 2006-08-28 16:01:54 +0100 (Mon, 28 Aug 2006) | 2 lines

Update web page a little.  Bump version up to 0.1.

------------------------------------------------------------------------
r83 | don | 2006-08-28 14:03:40 +0100 (Mon, 28 Aug 2006) | 2 lines

Add 2 new screenshots showing the browser and current map window

------------------------------------------------------------------------
r82 | don | 2006-08-28 12:47:41 +0100 (Mon, 28 Aug 2006) | 2 lines

Fix spelling mistake

------------------------------------------------------------------------
r81 | don | 2006-08-28 12:46:40 +0100 (Mon, 28 Aug 2006) | 2 lines

More README update

------------------------------------------------------------------------
r80 | don | 2006-08-28 12:37:17 +0100 (Mon, 28 Aug 2006) | 2 lines

Make the about dialog go away when requested

------------------------------------------------------------------------
r79 | don | 2006-08-28 12:31:15 +0100 (Mon, 28 Aug 2006) | 2 lines

Minor addition to configure.ac

------------------------------------------------------------------------
r78 | don | 2006-08-28 12:29:53 +0100 (Mon, 28 Aug 2006) | 2 lines

Make installation actually work (hopefully)

------------------------------------------------------------------------